mainframe-workers/src/parsers/grammar/batch/.antlr/BatchParser.java
// Generated from /Users/nguyen/Work/mainframe-workers/src/parsers/grammar/batch/Batch.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class BatchParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COND_COLON=1, STRING=2, ECHOSTATEMENT=3, REMSTATEMENT=4, EXE_FILE=5, ENABLEDELAYEDEXPANSION=6, 
		DISABLEDELAYEDEXPANSION=7, INT=8, WS=9, NL=10, COMMENTLINE=11, LPAREN=12, 
		RPAREN=13, ECHO=14, SET=15, SETLOCAL=16, REM=17, COLON=18, EQUAL=19, JP_EQUAL=20, 
		ATSIGN=21, SLASH=22, QUESTION=23, SSLASH=24, DASH_SFX=25, DASH_TZIP=26, 
		DASH_SORT=27, DASH_INPUT=28, DASH_OUTPUT=29, DASH_OPTION=30, DASH_RECORD=31, 
		DASH_P=32, DASH_W=33, DASH_Y=34, SLASH_W=35, SLASH_P=36, SLASH_C=37, SLASH_V=38, 
		SLASH_Q=39, SLASH_F=40, SLASH_L=41, SLASH_G=42, SLASH_D=43, SLASH_U=44, 
		SLASH_I=45, SLASH_S=46, SLASH_E=47, SLASH_T=48, SLASH_K=49, SLASH_R=50, 
		SLASH_H=51, SLASH_A=52, SLASH_M=53, SLASH_N=54, SLASH_O=55, SLASH_X=56, 
		SLASH_Y=57, SLASH_Z=58, SLASH_B=59, SLASH_J=60, SLASH_COMPRESS=61, SLASH_EXCLUDE=62, 
		DOT=63, COND=64, DISK_ADDRESS=65, BSORTEX=66, CALL=67, DEL=68, ELSE=69, 
		EQU=70, EXIST=71, EXE=72, ENDLOCAL=73, EXIT=74, IF=75, GOTO=76, GTR=77, 
		NUL=78, NEQ=79, PAUSE=80, RMDIR=81, FOR=82, IN=83, DO=84, PERCENT=85, 
		EXCLAMATION=86, MKDIR=87, XCOPY=88, TYPE=89, Z7=90, DASH=91, UNDERSCORE=92, 
		GREATER_CHAR=93, TILDE=94, TILDE_NX=95, COMMA=96, PLUS=97, STAR=98, JP_TXT=99, 
		JP_CHAR=100, IDENTIFIER=101, STRING_CHARACTERS=102;
	public static final int
		RULE_startRule = 0, RULE_label = 1, RULE_labelName = 2, RULE_statement = 3, 
		RULE_z7Statement = 4, RULE_z7Command = 5, RULE_z7Switches = 6, RULE_z7Switch = 7, 
		RULE_echoStatement = 8, RULE_remStatement = 9, RULE_bsortexStatement = 10, 
		RULE_sortParameters = 11, RULE_sortParameter = 12, RULE_sortValue = 13, 
		RULE_inputParameters = 14, RULE_inputParameter = 15, RULE_recordParameters = 16, 
		RULE_recordParameter = 17, RULE_optionParameters = 18, RULE_optionParameter = 19, 
		RULE_outputParameters = 20, RULE_outputParameter = 21, RULE_outputValue = 22, 
		RULE_callStatement = 23, RULE_callWithLabel = 24, RULE_callWithFilePath = 25, 
		RULE_batchParameters = 26, RULE_batchParameter = 27, RULE_conditionParameter = 28, 
		RULE_delStatement = 29, RULE_endlocalStatement = 30, RULE_execStatement = 31, 
		RULE_execFile = 32, RULE_execParameter = 33, RULE_concatenateFileContent = 34, 
		RULE_exitStatement = 35, RULE_exitCurrentBatch = 36, RULE_exitCode = 37, 
		RULE_forStatement = 38, RULE_configurationString = 39, RULE_forValues = 40, 
		RULE_forValue = 41, RULE_forVariable = 42, RULE_forVariableModifier = 43, 
		RULE_forDo = 44, RULE_gotoStatement = 45, RULE_ifStatement = 46, RULE_ifThen = 47, 
		RULE_ifElse = 48, RULE_simpleIf = 49, RULE_condition = 50, RULE_leftConditionOperator = 51, 
		RULE_rightConditionOperator = 52, RULE_relationalOperator = 53, RULE_mkdirStatement = 54, 
		RULE_setLocalStatement = 55, RULE_typeStatement = 56, RULE_rmdirStatement = 57, 
		RULE_xcopyStatement = 58, RULE_xCopySource = 59, RULE_xCopyDestination = 60, 
		RULE_switches = 61, RULE_switch = 62, RULE_dateFormat = 63, RULE_setLocalOption = 64, 
		RULE_setStatement = 65, RULE_displayFormating = 66, RULE_assignmentPart = 67, 
		RULE_pauseStatement = 68, RULE_variableName = 69, RULE_value = 70, RULE_calcValue = 71, 
		RULE_calcOperator = 72, RULE_filePath = 73, RULE_fileName = 74, RULE_fileNameChar = 75, 
		RULE_identifierCombinedWithReferencedVariable = 76, RULE_idetifierOrRerencedVariable = 77, 
		RULE_referencedVariable = 78, RULE_variableSubstring = 79, RULE_leftSubstring = 80, 
		RULE_rightSubstring = 81, RULE_replacedOrRemovedSubstring = 82, RULE_removeSubstring = 83, 
		RULE_removedSubstring = 84, RULE_removeSpaces = 85, RULE_replaceSubstring = 86, 
		RULE_subtringRemoved = 87, RULE_subStringReplaced = 88, RULE_startSub = 89, 
		RULE_lengthSub = 90, RULE_variableStart = 91, RULE_variableLength = 92, 
		RULE_concatenateString = 93;
	private static String[] makeRuleNames() {
		return new String[] {
			"startRule", "label", "labelName", "statement", "z7Statement", "z7Command", 
			"z7Switches", "z7Switch", "echoStatement", "remStatement", "bsortexStatement", 
			"sortParameters", "sortParameter", "sortValue", "inputParameters", "inputParameter", 
			"recordParameters", "recordParameter", "optionParameters", "optionParameter", 
			"outputParameters", "outputParameter", "outputValue", "callStatement", 
			"callWithLabel", "callWithFilePath", "batchParameters", "batchParameter", 
			"conditionParameter", "delStatement", "endlocalStatement", "execStatement", 
			"execFile", "execParameter", "concatenateFileContent", "exitStatement", 
			"exitCurrentBatch", "exitCode", "forStatement", "configurationString", 
			"forValues", "forValue", "forVariable", "forVariableModifier", "forDo", 
			"gotoStatement", "ifStatement", "ifThen", "ifElse", "simpleIf", "condition", 
			"leftConditionOperator", "rightConditionOperator", "relationalOperator", 
			"mkdirStatement", "setLocalStatement", "typeStatement", "rmdirStatement", 
			"xcopyStatement", "xCopySource", "xCopyDestination", "switches", "switch", 
			"dateFormat", "setLocalOption", "setStatement", "displayFormating", "assignmentPart", 
			"pauseStatement", "variableName", "value", "calcValue", "calcOperator", 
			"filePath", "fileName", "fileNameChar", "identifierCombinedWithReferencedVariable", 
			"idetifierOrRerencedVariable", "referencedVariable", "variableSubstring", 
			"leftSubstring", "rightSubstring", "replacedOrRemovedSubstring", "removeSubstring", 
			"removedSubstring", "removeSpaces", "replaceSubstring", "subtringRemoved", 
			"subStringReplaced", "startSub", "lengthSub", "variableStart", "variableLength", 
			"concatenateString"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'COND:'", null, null, null, null, "'EnableDelayedExpansion'", 
			"'DisableDelayedExpansion'", null, null, null, null, "'('", "')'", "'echo'", 
			"'set'", "'setlocal'", "'rem'", "':'", "'='", "'\\uFF1D'", "'@'", "'/'", 
			"'?'", "'\\'", "'-sfx'", "'-tzip'", "'-sort'", "'-input'", "'-output'", 
			"'-option'", "'-record'", null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "'/compress'", 
			"'/exclude'", "'.'", "'COND'", null, "'bsortex'", null, "'del'", "'else'", 
			"'equ'", "'exist'", "'exe'", "'endlocal'", "'exit'", null, "'goto'", 
			"'gtr'", "'nul'", "'neq'", "'pause'", "'rmdir'", "'for'", null, null, 
			"'%'", "'!'", "'mkdir'", "'xcopy'", "'type'", "'7z'", "'-'", "'_'", "'>'", 
			"'~'", "'~nx'", "','", "'+'", "'*'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COND_COLON", "STRING", "ECHOSTATEMENT", "REMSTATEMENT", "EXE_FILE", 
			"ENABLEDELAYEDEXPANSION", "DISABLEDELAYEDEXPANSION", "INT", "WS", "NL", 
			"COMMENTLINE", "LPAREN", "RPAREN", "ECHO", "SET", "SETLOCAL", "REM", 
			"COLON", "EQUAL", "JP_EQUAL", "ATSIGN", "SLASH", "QUESTION", "SSLASH", 
			"DASH_SFX", "DASH_TZIP", "DASH_SORT", "DASH_INPUT", "DASH_OUTPUT", "DASH_OPTION", 
			"DASH_RECORD", "DASH_P", "DASH_W", "DASH_Y", "SLASH_W", "SLASH_P", "SLASH_C", 
			"SLASH_V", "SLASH_Q", "SLASH_F", "SLASH_L", "SLASH_G", "SLASH_D", "SLASH_U", 
			"SLASH_I", "SLASH_S", "SLASH_E", "SLASH_T", "SLASH_K", "SLASH_R", "SLASH_H", 
			"SLASH_A", "SLASH_M", "SLASH_N", "SLASH_O", "SLASH_X", "SLASH_Y", "SLASH_Z", 
			"SLASH_B", "SLASH_J", "SLASH_COMPRESS", "SLASH_EXCLUDE", "DOT", "COND", 
			"DISK_ADDRESS", "BSORTEX", "CALL", "DEL", "ELSE", "EQU", "EXIST", "EXE", 
			"ENDLOCAL", "EXIT", "IF", "GOTO", "GTR", "NUL", "NEQ", "PAUSE", "RMDIR", 
			"FOR", "IN", "DO", "PERCENT", "EXCLAMATION", "MKDIR", "XCOPY", "TYPE", 
			"Z7", "DASH", "UNDERSCORE", "GREATER_CHAR", "TILDE", "TILDE_NX", "COMMA", 
			"PLUS", "STAR", "JP_TXT", "JP_CHAR", "IDENTIFIER", "STRING_CHARACTERS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Batch.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BatchParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartRuleContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(BatchParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<LabelContext> label() {
			return getRuleContexts(LabelContext.class);
		}
		public LabelContext label(int i) {
			return getRuleContext(LabelContext.class,i);
		}
		public StartRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startRule; }
	}

	public final StartRuleContext startRule() throws RecognitionException {
		StartRuleContext _localctx = new StartRuleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_startRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(191);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -9223372036829511624L) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & 96803721103L) != 0)) {
				{
				{
				setState(188);
				statement();
				}
				}
				setState(193);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(197);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COLON) {
				{
				{
				setState(194);
				label();
				}
				}
				setState(199);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(200);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LabelContext extends ParserRuleContext {
		public LabelNameContext labelName() {
			return getRuleContext(LabelNameContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public LabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label; }
	}

	public final LabelContext label() throws RecognitionException {
		LabelContext _localctx = new LabelContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_label);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(202);
			labelName();
			setState(206);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -9223372036829511624L) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & 96803721103L) != 0)) {
				{
				{
				setState(203);
				statement();
				}
				}
				setState(208);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LabelNameContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(BatchParser.COLON, 0); }
		public TerminalNode IDENTIFIER() { return getToken(BatchParser.IDENTIFIER, 0); }
		public LabelNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_labelName; }
	}

	public final LabelNameContext labelName() throws RecognitionException {
		LabelNameContext _localctx = new LabelNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_labelName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(209);
			match(COLON);
			setState(210);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public SetStatementContext setStatement() {
			return getRuleContext(SetStatementContext.class,0);
		}
		public SetLocalStatementContext setLocalStatement() {
			return getRuleContext(SetLocalStatementContext.class,0);
		}
		public DelStatementContext delStatement() {
			return getRuleContext(DelStatementContext.class,0);
		}
		public PauseStatementContext pauseStatement() {
			return getRuleContext(PauseStatementContext.class,0);
		}
		public MkdirStatementContext mkdirStatement() {
			return getRuleContext(MkdirStatementContext.class,0);
		}
		public XcopyStatementContext xcopyStatement() {
			return getRuleContext(XcopyStatementContext.class,0);
		}
		public CallStatementContext callStatement() {
			return getRuleContext(CallStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public GotoStatementContext gotoStatement() {
			return getRuleContext(GotoStatementContext.class,0);
		}
		public EchoStatementContext echoStatement() {
			return getRuleContext(EchoStatementContext.class,0);
		}
		public RemStatementContext remStatement() {
			return getRuleContext(RemStatementContext.class,0);
		}
		public EndlocalStatementContext endlocalStatement() {
			return getRuleContext(EndlocalStatementContext.class,0);
		}
		public ExitStatementContext exitStatement() {
			return getRuleContext(ExitStatementContext.class,0);
		}
		public ExecStatementContext execStatement() {
			return getRuleContext(ExecStatementContext.class,0);
		}
		public RmdirStatementContext rmdirStatement() {
			return getRuleContext(RmdirStatementContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public TypeStatementContext typeStatement() {
			return getRuleContext(TypeStatementContext.class,0);
		}
		public Z7StatementContext z7Statement() {
			return getRuleContext(Z7StatementContext.class,0);
		}
		public BsortexStatementContext bsortexStatement() {
			return getRuleContext(BsortexStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}
